--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="box">
                         <img src="images/profile-2.jpeg" alt="">
                         <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Lorem This is a change dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -199,7 +199,7 @@
                     <div class="box">
                         <img src="images/profile-4.jpeg" alt="">
                         <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dolor sit  consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
