--- a/index.html
+++ b/index.html
@@ -246,7 +246,16 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    
+                    <form id="contact-form">
+                        <input type="hidden" name="contact_number">
+                        <label>Name</label>
+                        <input type="text" name="user_name">
+                        <label>Email</label>
+                        <input type="email" name="user_email">
+                        <label>Message</label>
+                        <textarea name="message"></textarea>
+                        <input type="submit" value="Send">
+                    </form>
                     <form id="contact-form">
                         <div class="fields">
                             <div class="field name">
@@ -264,7 +273,7 @@
                         </div>
                         <div class="button-area">
                             <button type="submit" value="Send">Send message</button>
-                            <input type="submit" value="Send">
+                            
                         </div>
                     </form>
                 </div>
