--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <div class="box">
                         <img src="images/profile-5.jpeg" alt="">
                         <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dhi.</p>
                     </div>
                 </div>
             </div>
