--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
+
                     
+
                     <form id="contact-form">
                         <div class="fields">
                             <div class="field name">
@@ -264,6 +266,7 @@
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
+                            <input type="submit" value="Send">
                             
                         </div>
                     </form>
