--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                             <textarea cols="30" rows="10" name="message" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <input type="submit" value="Send">
 
+                            <button type="submit" value = "send">Send message</button>
 
                             
                             
