--- a/index.html
+++ b/index.html
@@ -175,38 +175,39 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>I worked through a program offered by Lyft to give experience with back-end development while teaching Software Architecture, Refactoring and Test-Driven Development. 
-                            I worked on implementing Vehicle and Engine classes in python to make testing the status of cars easier.</p>
+                        <img src="photos/vaccine1.png" alt="">
+                        <div class="text">Vaccine Scheduler</div>
+                        <p>I created a program for patients and caretakers to create and manage appointments. This was made using Java, SQL and Microsoft Azure. Appointments are stored online, with any additions or changes updating the database.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem This is a change dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="photos/jumpstartHome.png" alt="">
+                        <div class="text">JumpStart</div>
+                        <p>After Designing the layout of a Job-Search website for a hackathon, I built it in plain JS/CSS/HTML, and worked on creating an autocomplete program to display possible job opportunities based on your input and preferences.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="photos/lyft.jpeg" alt="">
+                        <div class="text">Lyft</div>
+                        <p>I participated in a program offered by lyft, and implemented Vehicle and Engine classes in python  make testing the status of cars easier.
+                            This gave experience with back-end development while teaching Software Architecture, Refactoring and Test-Driven Development. 
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit  consectetur adipisicing elit.</p>
+                        <img src="photos/grocerLogin.png" alt="">
+                        <div class="text">GrocerE</div>
+                        <p>Made a front-end GUI for a hypothetical online marketplace, allowing users to create accounts, sign in and make lists of groceries they want to buy. The interface was built using Java and the Swing toolkit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dhi.</p>
+                        <img src="photos/BEI.png" alt="">
+                        <div class="text">BEI</div>
+                        <p>The team I am managing and I created a website for a nearby club, complete with contact forms, beautiful layouts and a ton of cool features. This was done in HTML, CSS and JavaScript, is hosted on the school server, and uses multiple APIs to send contact info.</p>
                     </div>
                 </div>
             </div>
