--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Tim Kaltenbach</div>
-                <div class="text-3">Thanks for checking out my website! </div>
-                <a href="#">Hire me</a>
+                <div class="text-3">Check out my website to learn more about me! </div>
+                <a href="#about">Hire me</a>
             </div>
         </div>
     </section>
@@ -78,7 +78,7 @@
                 <div class="column right">
                     <div class="text">Hi I'm <span class="typing-2">Tim Kaltenbach</span></div>
                     <p>I'm a current sophomore at UW Seattle, planning on graduating in 2024 with a double degree in Computer Science and Business Administration. I have a particular interests in Machine Learning and Web development, furthering them through  projects ranging from iOS based apps to virtual reality games. Outside of academics, I enjoy baking, snowboarding and watching movies.</p>
-                    <a href="#">Download Resume</a>
+                    <a href="#about" download="photos/timresume.pdf">Download Resume</a>
                 </div>
             </div>
         </div>
