--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#">Kalten<span>bach</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -62,7 +62,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Tim Kaltenbach</div>
-                <div class="text-3">Check out my website to learn more about me! </div>
+                <div class="text-3">Scroll down to learn more about me!</div>
                 <a href="#about">Hire me</a>
             </div>
         </div>
