--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="column right">
                     <div class="text">Hi I'm <span class="typing-2">Tim Kaltenbach</span></div>
                     <p>I'm a current sophomore at UW Seattle, planning on graduating in 2024 with a double degree in Computer Science and Business Administration. I have a particular interests in Machine Learning and Web development, furthering them through  projects ranging from iOS based apps to virtual reality games. Outside of academics, I enjoy baking, snowboarding and watching movies.</p>
-                    <a href="photos/timresume2.png" target="_blank" download="photos/timresume.png">Download Resume</a>
+                    <a href="photos/timresume.png" download="photos/timresume.png">Download Resume</a>
                 </div>
             </div>
         </div>
