--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     }, function(error) {
                         console.log('FAILED...', error);
                     });
+                document.getElementById('contact-form').reset();
             });
         }
     </script>
