--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="column right">
                     <div class="text">Hi I'm <span class="typing-2">Tim Kaltenbach</span></div>
                     <p>I'm a student at UW Seattle, planning on graduating in 2025 with a double degree in Computer Science and Business Administration. I have a particular interests in Machine Learning and Web development, furthering them through  projects ranging from iOS based apps to virtual reality games. Outside of academics, I enjoy baking, snowboarding and watching movies.</p>
-                    <a href="#about" download="photos/photos:timresume.pdf" >Download Resume</a>
+                    <a href="#about" download="photos/resume_TimKaltenbach.pdf" >Download Resume</a>
                 </div>
             </div>
         </div>
