--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="column right">
                     <div class="text">Hi I'm <span class="typing-2">Tim Kaltenbach</span></div>
                     <p>I'm a student at UW Seattle, planning on graduating in 2025 with a double degree in Computer Science and Business Administration. I have a particular interests in Machine Learning and Web development, furthering them through  projects ranging from iOS based apps to virtual reality games. Outside of academics, I enjoy baking, snowboarding and watching movies.</p>
-                    <a href="#about" download="photos/resume_TimKaltenbach.pdf" >Download Resume</a>
+                    <a href="#about" download="photos/lyft.jpeg" >Download Resume</a>
                 </div>
             </div>
         </div>
@@ -89,7 +89,15 @@
         <div class="max-width">
             <h2 class="title" >My Experience</h2>
             <div class="serv-content">
-                
+                <div class="card">
+                    <div class="box">
+                        <!--<i class="fas fa-code"></i>-->
+                        <div class="text">Intersect</div>
+                        <p>As one of 3 members on an engineering team, I developed their mobile application and added functionality for data collection and manipulation from Apple Healthkit, as well as backend storage and data access through Google Firebase.
+I also created a matching watchOS app for users to control and interact with the mobile app.
+                        </p>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="box">
                         <!--<i class="fas fa-chart-line"></i>-->
@@ -106,13 +114,6 @@
                             a variety of projects such as developing the API used to retrieve patient's information, 
                             creating their login page, 
                             and most recently designing the data pipeline for their Machine-Learning algorithms.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <!--<i class="fas fa-code"></i>-->
-                        <div class="text">Deep Learning Specialization</div>
-                        <p>I completed a 5 month specialization to build and train neural networks, and utilize strategies to improve them. I learned the capabilities and consequences of deep learning, and used Python to tackle cases like speech recognition, music synthesis, and natural language processing. </p>
                     </div>
                 </div>
                </div>
