--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
                 <div class="card">
                     <div class="box">
                         <!--<i class="fas fa-code"></i>-->
+                        <div class="text">Amazon</div>
+                        <p>As a Junior Developer, I work year-round to develop software, improve services, and build new features for Amazon Authors.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <!--<i class="fas fa-code"></i>-->
                         <div class="text">Intersect</div>
                         <p>As one of 3 members on an engineering team, I developed their mobile application and added functionality for data collection and manipulation from Apple Healthkit, as well as backend storage and data access through Google Firebase.
 I also created a matching watchOS app for users to control and interact with the mobile app.
