--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ I also created a matching watchOS app for users to control and interact with the
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My Technical skills & Training.</div>
-                    <p>Along with proficiency in multiple programming languages, I have practice working through XCode, IntelliJ, Unity and Visual Studio. My classes have ranged from Computer Science Principles, Data Structures and Algorithms to Artificial Intelligence, Database Management and App Design.</p>
+                    <p>Along with proficiency in multiple programming languages, I have practice working through XCode, IntelliJ, Unity and Visual Studio. My classes have ranged from Computer Science Principles, Data Structures and Algorithms to Artificial Intelligence, Database Management, App Design and Machine Learning.</p>
                     <a href="#services">Read more</a>
                 </div>
                 <div class="column right">
