--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="box">
                         <!--<i class="fas fa-code"></i>-->
                         <div class="text">Amazon</div>
-                        <p>As a Junior Developer, I work year-round to develop software, improve services, and build new features for Amazon Authors.
+                        <p>As a Junior Developer, I work year-round to develop software for Amazon Authors. Most recently, I Designed and implemented a service that updates the status of reports in real time, providing customers with the ability to see how their reports are progressing.
                         </p>
                     </div>
                 </div>
@@ -111,17 +111,6 @@ I also created a matching watchOS app for users to control and interact with the
                         <!--<i class="fas fa-chart-line"></i>-->
                         <div class="text">Dubvelopers - Coding Lead</div>
                         <p>I'm currently working as a coding lead for an on-campus organization, where I lead and manage my a team of students to create websites for organizations near to campus. As the coding lead, I hold meetings to teach members new concepts, help with any issues, and manage workflow.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box" id="pic1">
-                        
-                        <!--<i class="fas fa-paint-brush"></i> -->
-                        <div class="text">AeyeSafe - Junior Software Developer</div>
-                        <p>I spent the summer of 2022 working for a Seattle based startup, where I have assisted with 
-                            a variety of projects such as developing the API used to retrieve patient's information, 
-                            creating their login page, 
-                            and most recently designing the data pipeline for their Machine-Learning algorithms.</p>
                     </div>
                 </div>
                </div>
