--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Hi I'm <span class="typing-2">Tim Kaltenbach</span></div>
-                    <p>I'm a student at UW Seattle, planning on graduating in 2025 with a double degree in Computer Science and Applied Math:Data Science, where I am focused on Computational Finance. I have a particular interests in Machine Learning and Risk Management, furthering them through  projects ranging from iOS based apps to trading bots. Outside of academics, I enjoy baking, surfing and watching movies.</p>
+                    <p>I'm a student at UW Seattle, planning on graduating in 2025 with a double degree in Computer Science and Applied Math, where I am focused on Computational Finance. I have a particular interests in Machine Learning and Risk Management, furthering them through  projects ranging from iOS based apps to trading bots. Outside of academics, I enjoy baking, surfing and watching movies.</p>
                     <a href="#about" download="photos/lyft.jpeg" >Download Resume</a>
                 </div>
             </div>
